--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,6 @@ color: rgba(141, 54, 115, 0.397);
 .imger
 {
     max-height:200px ;
-    padding-left:118px ;
     max-width: 400px;
     min-width: 100px;
 }
@@ -127,9 +126,6 @@ color: rgba(141, 54, 115, 0.397);
     
   /* //////////////////////////////////////////////////////// ABOUT MOUNT  /////////////////////////////////////////*/
 
-.aboutmount{
-    padding-left: 150px;
-}
 
 .aboutmountkanchan{
     padding-right:60px ;
@@ -176,10 +172,6 @@ color: rgba(141, 54, 115, 0.397);
 
 
 /* ////////////////////////////////////////////////////////// ABOUT MOUNT COUNTRY //////////////////////////////////////////*/
-.aboutcountry{
-    padding-left:200px;
-    padding-bottom: 5px;;
-}
 
 .aboutcountryPOK{
     padding-left: 220px;
@@ -203,4 +195,19 @@ color: rgba(141, 54, 115, 0.397);
     margin-left:10px;
     padding-bottom:5px;
     margin-right:10px;
+}
+.container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.container article {
+    width: 40%;
+    margin: 5%;
+    background-color: white;
+    border-radius: 40px;
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
